# Machine-Learning-within-Application-for-analysis-a-probability-of-Obesity-in-Thai-People

./: .gitignore  AGENTS.md  BEAST1_UPDATE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  debug-session-summary.md  pyproject.toml  render.yaml  requirements.txt
data/: chatbot_training.json  sample_obesity_training.csv
docs/: API.md  ARCHITECTURE.md  TASKS.md  research_writing_rules.md
docs/superpowers/plans/: 2026-05-30-beast-chatbot.md  2026-06-12-methods-evaluation-dashboard.md  2026-06-12-premium-health-ui-redesign.md  2026-06-24-jinja2-hybrid-migration.md  2026-06-24-sklearn-model-performance-analysis.md
docs/superpowers/specs/: 2026-05-29-beast-chatbot-design.md  2026-06-12-methods-evaluation-dashboard-design.md  2026-06-12-premium-health-ui-redesign.md
memory/: MEMORY.md  project_overview.md  user_profile.md
models/: chatbot_model.joblib  obesity_probability_model.joblib
src/obesity_ml/: __init__.py  advice.py  app.py  charts.py  chatbot.py  config.py  features.py  form_import.py  predict.py  risk_tiers.py  templating.py  train.py  uci_import.py
src/obesity_ml/routes/: __init__.py  api.py
src/obesity_ml/templates/: base.html
src/obesity_ml/templates/partials/: styles.html
tests/: test_app_regressions.py  test_chatbot.py  test_templating.py  test_uci_import.py
