[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obesity-ml-app"
version = "0.1.0"
description = "Educational obesity probability machine-learning application."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.0",
  "joblib>=1.4.2",
  "imbalanced-learn>=0.14.0",
  "python-multipart>=0.0.20",
  "xgboost>=3.1.0",
  "httpx>=0.28.1",
  "httpx2>=2.4.0",
  "langdetect>=1.0.9",
  "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
obesity_ml = ["static/*", "templates/*.html", "templates/partials/*.html"]

[project.scripts]
obesity_ml-train-chat = "obesity_ml.chatbot:train_chatbot_cli"
